log
sá., 14 de may. de 2022 22:11:48: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|5
total_score: 0/70
e909da3
sá., 14 de may. de 2022 22:13:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:19: error: assignment to expression with array type
       adj_n->sudo = n->sudo;
                   ^
Compilation failed
6dd5780
sá., 14 de may. de 2022 22:14:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8983490
sá., 14 de may. de 2022 22:15:41: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
34431ac
sá., 14 de may. de 2022 22:16:50: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
515c4f7
sá., 14 de may. de 2022 22:17:16: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1133e11
sá., 14 de may. de 2022 22:19:10: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
4f03bcb
sá., 14 de may. de 2022 22:21:14: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7ba7530
sá., 14 de may. de 2022 22:22:11: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:75:5: error: statement with no effect [-Werror=unused-value]
     for (f ; f <= 8 ; f++)
     ^~~
sudoku.c:77:7: error: statement with no effect [-Werror=unused-value]
       for (k ; k <= 8 ; k++)
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
29bcfe3
sá., 14 de may. de 2022 22:22:45: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
fec5400
sá., 14 de may. de 2022 22:24:11: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
51e7af5
sá., 14 de may. de 2022 22:26:31: 
 sudoku.c | 33 ++-------------------------------
 1 file changed, 2 insertions(+), 31 deletions(-)
 tests:  2|4
total_score: 15/70
a5930ee
